# WF-Test

./: README.md  auto_clone.sh  auto_remove.sh  git_commit.sh
src/: wf_autostart.sh  wf_compile_all.sh  wf_compile_no_lib.sh  wf_start.sh
src/wf_server/: CMakeLists.txt  Makefile  make_wf_server.sh  wf_config.h  wf_server_main.cpp
src/wf_server/bitmap_loader/: CMakeLists.txt  Makefile  bitmap.cpp  bitmap.h  make_lib_bitmap_loader.sh
src/wf_server/debug_logger/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  debug_logger.cpp  debug_logger.h  make_lib_debug_logger.sh
src/wf_server/helper/: bitoperations.h  linux_shell_cmd.cpp
src/wf_server/ini_parser/: CMakeLists.txt  Makefile  ini_parser.cpp  ini_parser.h  make_lib_ini_parser.sh
src/wf_server/rpi_spi_lib/: CMakeLists.txt  Makefile  make_lib_rpi_spi.sh  rpi_spi_lib.cpp  rpi_spi_lib.h
wf_server/: Makefile  wf_main.cpp
